Bug 148819 - Increase a scrolling speed for Math items in Element Pane
Summary: Increase a scrolling speed for Math items in Element Pane
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Scrolling-PageUpDown
  Show dependency treegraph
 
Reported: 2022-04-27 12:11 UTC by Roman Kuznetsov
Modified: 2022-04-27 20:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2022-04-27 12:11:41 UTC
Description:
Increase a scrolling speed for Math items in Element Pane

Steps to Reproduce:
1. Open Math
2. Open Element Pane
3. Select Operators category
4. Try scroll the list of the items below using a mouse wheel => it's so slow

Actual Results:
Scrolling in Element pane is so slow

Expected Results:
Scrolling in Element pane is fast


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3a05acb8f0d94728ea6cbfd7a69dac6ffa7ffc68
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded
Comment 1 Mike Kaganski 2022-04-27 12:15:21 UTC
Repro on Windows; no repro on Ubuntu with gtk3.
Comment 2 Mike Kaganski 2022-04-27 14:17:50 UTC
Caolan: since there's a normal scrolling speed on gtk3, and there's no code in starmath/source/ElementsDockingWindow.cxx calling *adjustment_set_step_increment, I assume there's some magic somewhere setting sensible defaults - likely integration-dependent. Thus, it would seem hackish to add some manual override in the SmElementsControl itself to fix that - it would be likely desirable instead to make some fix at the respective code setting the default.

Do you know where it's defined (in gtk3 and/or in other integrations)?
Thank you!
Comment 3 Mike Kaganski 2022-04-27 14:39:37 UTC
(In reply to Mike Kaganski from comment #2)

On the other hand, the scrolling speed is usually (?) determined by a system setting defining how many *lines* are scrolled at each wheel step. And only this owner-draw control itself may know how tall its line is.

Let me create a fix then.
Comment 4 Mike Kaganski 2022-04-27 14:44:07 UTC
https://gerrit.libreoffice.org/c/core/+/133518
Comment 5 Commit Notification 2022-04-27 20:37:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8de60b9049f07d8a958d0e28759dca247c4d5044

tdf#148819: let the scroller know the custom widget's line size

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.