tdf#148819: let the scroller know the custom widget's line size

Change-Id: Ie30cd1db182aad5fbbf7e89498bd0ae9ce98c0f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133518
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>